2012-04-05  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/ext/expose.jl
	* lisp/sawfish/wm/edge/misc.jl: fixup expose action

	* lisp/sawfish/wm/commands/launcher.jl: add filemanager launcher

	* lisp/sawfish/wm/menus.jl
	* lisp/sawfish/wm/user.jl: if filemanager is set, provide 'Open Home'
	entry in Sawfish's root-menu

	* lisp/sawfish/wm/integration/mate.jl
	* lisp/sawfish/wm/integration/razor-qt.jl
	* lisp/sawfish/wm/integration/kde.jl
	* lisp/sawfish/wm/integration/gnome.jl
	* lisp/sawfish/wm/integration/xfce.jl: try to match against
	XDG_CURRENT_DESKTOP to detect desktop -- add desktop specific entries
	for filemanager launcher

	* lisp/sawfish/wm/integration/lxde.jl: LXDE integration module

	* configure.in: bump version to 1.8.99 "Housenation"

	* configure.in
	* Makdefs.in
	* scripts/Makefile.in
	* scripts/sawfish-about.jl.in: update copyright notice // show
	codename in the about-dialog

	* lisp/sawfish/cfg/shell.jl: re-align buttons

2012-03-26  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/ext/match-window.jl
	* lisp/sawfish/wm/ext/window-history.jl
	* lisp/sawfish/wm/tabs/tab.jl: add tab-group feature [fuchur]

2012-01-19  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/windows.jl: add window-class-name [Wang HongQin]

	* lisp/sawfish/wm/util/events.jl
	* lisp/sawfish/wm/ext/cabinet.jl: added cabinet [Wang HonqQin]

	* lisp/sawfish/wm/ext/expose.jl: new expose func [Wang HonqQin]

	* lisp/sawfish/wm/integration/razor.jl: fix razor-power calls

2012-01-14  Christopher Roy Bratusek <nano@tuxfamily.org>
	* sawfish.spec: sync spec-file with Fedora [Kim B. Heino]

	* themes/StyleTab/theme.jl: replace spinbuttons with comboboxes for
	configuration user-interface [fuchur]

	* lisp/sawfish/wm/integration/razor.jl: add integration-module for
	Razor-Qt

	* lisp/sawfish/wm/user.jl: same

2011-12-27  Christopher Roy Bratusek <nano@tuxfamily.org>