@@ -1,3 +1,6 @@
+2012-07-05  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* src/images.c: replace gdk_pixbuf_unref with g_object_unref [Togan Muftouglu]
+
 2012-04-05  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/ext/expose.jl
 	* lisp/sawfish/wm/edge/misc.jl: fixup expose action
